# MSQA

./: .gitignore  README.md  index.html  pyproject.toml
advanced/: calibration_eval.py
assets/: figure2_ranking_shift.csv  index-BtNjj9fZ.js  index-CIZPaEru.css  index-CYP0yQmT.js  index-CbYxoI1H.js  index-rWqv9EJ8.css  index-zLvPAx1n.js
data/: README.md  msqa.csv  msqa.jsonl
examples/: run_pipeline.sh
src/msqa/: __init__.py  data.py  generate.py  judge.py  llm_client.py  score.py
tools/: build_dataset.py
