[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msqa"
version = "0.1.0"
description = "Evaluation toolkit for the MSQA multilingual & multicultural QA benchmark"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "CC-BY-4.0" }
dependencies = [
    "openai>=1.0",
    "pandas>=1.5",
    "openpyxl>=3.1",
    "numpy>=1.23",
    "requests>=2.28",
]

[project.optional-dependencies]
hub = ["datasets>=2.14"]

[project.scripts]
msqa-generate = "msqa.generate:main"
msqa-judge = "msqa.judge:main"
msqa-score = "msqa.score:main"

[tool.setuptools.packages.find]
where = ["src"]
